apps/sample/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx
spec:
  selector:
    matchLabels:
      app: sample
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /dummy
            name: sample-volume
      volumes:
        - name: sample-volume
          persistentVolumeClaim:
            claimName: sample
