apps/sample/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-http
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: sample.lab.homecentr.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-nginx
            port:
              number: 80
